設定ウィンドウ

--- a/ShibugakiViewer/Views/Resources/Constants.xaml
+++ b/ShibugakiViewer/Views/Resources/Constants.xaml
@@ -172,6 +172,8 @@
     <system:String x:Key="ImportSymbol">&#xf2fa;</system:String>
 
 
+    <system:String x:Key="DatabaseSymbol">&#xf1b8;</system:String>
+    <system:String x:Key="FolderSymbol">&#xf256;</system:String>
     <!--
     <system:String x:Key="UpArSymbol">&#x2191;</system:String>
     <system:String x:Key="DownArSymbol">&#x2193;</system:String>
