--- a/ShibugakiViewer/Views/InformationPanes/HelpPage.xaml
+++ b/ShibugakiViewer/Views/InformationPanes/HelpPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ShibugakiViewer.Views.InformationPanes.ToolsPage"
+﻿<UserControl x:Class="ShibugakiViewer.Views.InformationPanes.HelpPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,11 +15,7 @@
 
     <Grid x:Name="rootGrid" Background="Transparent" HorizontalAlignment="Stretch">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        
+
         <ScrollViewer Margin="0"
                       VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled"
@@ -28,50 +24,23 @@
             <StackPanel>
 
                 <cc:FlatButton
-                    x:Name="refreshButton"
-                    Style="{StaticResource flatButtonStretchStyle}">
-                    <cc:LabeledIcon
-                        IconText="{StaticResource RefreshSymbol}"
-                        Text="{x:Static properties:Resources.RefreshLibrary}"/>
-                </cc:FlatButton>
-
-                <cc:FlatButton
                     Style="{StaticResource flatButtonStretchStyle}"
                     Click="FlatButton_Click">
                     <cc:LabeledIcon
-                        IconText="{StaticResource FolderSymbol}"
-                        Text="{x:Static properties:Resources.FolderManagement}"/>
-                </cc:FlatButton>
-                
-                <cc:FlatButton
-                    Style="{StaticResource flatButtonStretchStyle}"
-                    Click="FlatButton_Click_2">
-                    <cc:LabeledIcon
-                        IconText="{StaticResource DatabaseSymbol}"
-                        Text="{x:Static properties:Resources.DatabaseTool}"/>
-                </cc:FlatButton>
-                
-                
-                <cc:FlatButton
-                    Style="{StaticResource flatButtonStretchStyle}"
-                    Click="Button_Click">
-                    <cc:LabeledIcon
-                        IconText="{StaticResource SettingSymbol}"
-                        Text="{x:Static properties:Resources.Options}"/>
+                        IconText="{StaticResource KeyboardSymbol}"
+                        Text="{x:Static properties:Resources.KeyBindHelp_Text}"/>
                 </cc:FlatButton>
 
+
+                <cc:FlatButton
+                    Style="{StaticResource flatButtonStretchStyle}"
+                    Click="Button_Click_1">
+                    <cc:LabeledIcon
+                        IconText="{StaticResource QuestionSymbol}"
+                        Text="{x:Static properties:Resources.Version_Text}"/>
+                </cc:FlatButton>
 
             </StackPanel>
         </ScrollViewer>
-
-        <cc:FlatButton
-            Grid.Row="1"
-            Style="{StaticResource flatButtonStretchStyle}"
-            Click="FlatButton_Click_1">
-            <cc:LabeledIcon
-                IconText="{StaticResource RemoveSymbol}"
-                Text="{x:Static properties:Resources.ExitApp}"/>
-        </cc:FlatButton>
-        
     </Grid>
 </UserControl>
