--- a/ShibugakiViewer/Views/Windows/FolderWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/FolderWindow.xaml
@@ -1,5 +1,4 @@
-﻿<Window x:Class="ShibugakiViewer.Views.Windows.SettingWindow"
-        x:Name="controlRoot"
+﻿<Window x:Class="ShibugakiViewer.Views.Windows.FolderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,11 +11,8 @@
         ResizeMode="CanResizeWithGrip"
         Closed="Window_Closed"
         mc:Ignorable="d"
-        Title="{x:Static properties:Resources.Options}" Height="720" Width="640">
-    <Window.DataContext>
-        <viewModels:SettingWindowViewModel/>
-    </Window.DataContext>
-    
+        Title="{x:Static properties:Resources.FolderManagement}" Height="720" Width="640">
+
     <Grid>
 
         <Grid.RowDefinitions>
@@ -24,30 +20,15 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         
-        <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                    HorizontalContentAlignment="Stretch"
-                    Padding="0"
-                    Grid.Row="0"
-                    SelectedIndex="{Binding ElementName=controlRoot,Path=Core.SettingPageIndex,Mode=TwoWay}">
-            
-            <TabItem Header="Viewer">
-                <pages:ViewerSettingPage 
-                    DataContext="{Binding SettingViewModel,Mode=OneWay}"/>
-            </TabItem>
-
-            <TabItem Header="Search">
-                <pages:SearchSettingPage
-                    DataContext="{Binding SettingViewModel,Mode=OneWay}"/>
-            </TabItem>
-            
-        </TabControl>
-
+        <pages:FolderSettingPage
+            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+            HorizontalContentAlignment="Stretch" x:Name="folderSetting"/>
 
         <Button
             Content="{x:Static properties:Resources.OkButton_Content}"
             Grid.Row="1" Margin="8,8,32,16" HorizontalAlignment="Right"
             Width="86" Height="30"
             Click="Button_Click"/>
-        
+
     </Grid>
 </Window>
